# STCP-Assignment

./: CMakeLists.txt  READMEWordDoc.docx  big.txt  client  client.c  rcvd  server  test.txt  transport.c  ~$ADMEWordDoc.docx  ~WRL1574.tmp
202481828_JerrySongGu_assign3/: transport.c
